--- a/FlowCrypt/src/main/res/layout/activity_create_or_import_key.xml
+++ b/FlowCrypt/src/main/res/layout/activity_create_or_import_key.xml
@@ -4,69 +4,90 @@
   ~ Contributors: DenBond7
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewSetupFlowCrypt"
-        android:text="@string/set_up_flow_crypt"
-        style="@style/ScreenHeading"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/buttonCreateNewKey"
-        style="@style/AppWidget.Button.Green"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/margin_top_first_button"
-        android:alpha="0.5"
-        android:enabled="false"
-        android:text="@string/create_a_new_key"
-        android:theme="@style/AppWidget.Button.Green"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSetupFlowCrypt" />
+        <TextView
+            android:id="@+id/textViewSetupFlowCrypt"
+            style="@style/ScreenHeading"
+            android:text="@string/set_up_flow_crypt"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/buttonImportMyKey"
-        style="@style/AppWidget.Button.Green"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/margin_between_buttons"
-        android:text="@string/import_my_key"
-        android:theme="@style/AppWidget.Button.Green"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCreateNewKey" />
+        <Button
+            android:id="@+id/buttonCreateNewKey"
+            style="@style/AppWidget.Button.Green"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_top_first_button"
+            android:alpha="0.5"
+            android:enabled="false"
+            android:text="@string/create_a_new_key"
+            android:theme="@style/AppWidget.Button.Green"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/textViewSetupFlowCrypt" />
 
-    <Button
-        android:id="@+id/buttonSelectAnotherAccount"
-        style="@style/AppWidget.Button"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/margin_between_buttons"
-        android:text="@string/use_another_account"
-        android:theme="@style/AppWidget.Button.White"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/buttonImportMyKey" />
+        <Button
+            android:id="@+id/buttonImportMyKey"
+            style="@style/AppWidget.Button.Green"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_between_buttons"
+            android:text="@string/import_my_key"
+            android:theme="@style/AppWidget.Button.Green"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/buttonCreateNewKey" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guidelineLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />
+        <Button
+            android:id="@+id/buttonSelectAnotherAccount"
+            style="@style/AppWidget.Button"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_between_buttons"
+            android:text="@string/use_another_account"
+            android:theme="@style/AppWidget.Button.White"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/buttonImportMyKey" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guidelineRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
+        <Button
+            android:id="@+id/buttonSkipSetup"
+            style="@style/AppWidget.Button"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_between_buttons"
+            android:text="@string/skip_setup"
+            android:theme="@style/AppWidget.Button.White"
+            android:visibility="gone"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/buttonSelectAnotherAccount"
+            tools:visibility="visible" />
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.constraint.Guideline
+            android:id="@+id/guidelineLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guidelineRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
