--- a/FlowCrypt/src/main/res/drawable/ic_more_vert_gray_32dp.xml
+++ b/FlowCrypt/src/main/res/drawable/ic_more_vert_gray_32dp.xml
@@ -6,7 +6,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="32dp"
     android:height="32dp"
-    android:tint="#31A217"
+    android:tint="#989898"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
