--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/textViewSenderAddress"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/default_margin_small"
+                    android:layout_marginEnd="@dimen/default_margin_content"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="@color/gray"
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin_medium"
-                    android:layout_marginEnd="@dimen/default_margin_content_big"
+                    android:layout_marginEnd="@dimen/default_margin_huge"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/reply_all"
                     android:visibility="invisible"
@@ -60,7 +60,7 @@
                     app:layout_constraintStart_toStartOf="@+id/textViewDate"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_goneMarginRight="@dimen/default_margin_medium"
-                    app:srcCompat="@mipmap/ic_reply_all_green"
+                    app:srcCompat="@mipmap/ic_reply_all_red"
                     tools:visibility="visible" />
 
                 <ImageButton
@@ -73,7 +73,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_goneMarginRight="@dimen/default_margin_medium"
-                    app:srcCompat="@drawable/ic_more_vert_green_32dp"
+                    app:srcCompat="@drawable/ic_more_vert_gray_32dp"
                     tools:visibility="visible" />
 
                 <TextView
