--- a/FlowCrypt/src/main/res/menu/activity_base.xml
+++ b/FlowCrypt/src/main/res/menu/activity_base.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menuFeedback"
-        android:icon="@mipmap/ic_help"
+        android:icon="@drawable/ic_help_white_24dp"
         android:menuCategory="system"
         android:orderInCategory="1000"
         android:title="@string/feedback"
