--- a/FlowCrypt/src/main/res/menu/activity_email_manager.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menuFeedback"
-        android:icon="@mipmap/ic_help"
+        android:icon="@drawable/ic_help_white_24dp"
         android:menuCategory="system"
         android:orderInCategory="1000"
         android:title="@string/feedback"
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/menuSearch"
-        android:icon="@mipmap/ic_action_search"
+        android:icon="@drawable/ic_search_white_24dp"
         android:menuCategory="system"
         android:orderInCategory="100"
         android:title="@string/search"
