--- a/FlowCrypt/src/main/res/menu/activity_feedback.xml
+++ b/FlowCrypt/src/main/res/menu/activity_feedback.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/menuActionSend"
-        android:icon="@mipmap/ic_action_send"
+        android:icon="@drawable/ic_send_white_24dp"
         android:title="@string/send"
         app:showAsAction="always" />
 </menu>
