--- a/FlowCrypt/src/main/res/menu/activity_preview_import_pgp_contact.xml
+++ b/FlowCrypt/src/main/res/menu/activity_preview_import_pgp_contact.xml
@@ -9,7 +9,7 @@
     tools:context="com.flowcrypt.email.ui.activity.ImportPgpContactActivity">
     <item
         android:id="@+id/menuActionHelp"
-        android:icon="@mipmap/ic_help"
+        android:icon="@drawable/ic_help_white_24dp"
         android:orderInCategory="100"
         android:title="@string/help"
         app:showAsAction="always" />
