--- a/FlowCrypt/src/main/res/menu/activity_search_messages.xml
+++ b/FlowCrypt/src/main/res/menu/activity_search_messages.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menuSearch"
-        android:icon="@mipmap/ic_action_search"
+        android:icon="@drawable/ic_search_white_24dp"
         android:menuCategory="system"
         android:orderInCategory="100"
         android:title="@string/search"
