--- a/FlowCrypt/src/main/res/menu/activity_select_contact.xml
+++ b/FlowCrypt/src/main/res/menu/activity_select_contact.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menuSearch"
-        android:icon="@mipmap/ic_action_search"
+        android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
