--- a/FlowCrypt/src/main/res/menu/activity_send_message.xml
+++ b/FlowCrypt/src/main/res/menu/activity_send_message.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menuActionSwitchType"
-        android:icon="@mipmap/ic_action_switch"
+        android:icon="@drawable/ic_switch_white_24dp"
         android:orderInCategory="100"
         android:title="@string/switch_to_standard_email"
         app:showAsAction="ifRoom" />
