--- a/FlowCrypt/src/main/res/menu/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/menu/fragment_message_details.xml
@@ -8,20 +8,26 @@
 
     <item
         android:id="@+id/menuActionArchiveMessage"
-        android:icon="@drawable/ic_archive_white_24dp"
+        android:icon="@drawable/selector_ic_archive_white"
         android:title="@string/archive"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menuActionDeleteMessage"
-        android:icon="@drawable/ic_delete_white_24dp"
+        android:icon="@drawable/selector_ic_delete_white"
         android:title="@string/delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menuActionMoveToInbox"
-        android:icon="@drawable/ic_move_to_inbox_white_24dp"
+        android:icon="@drawable/selector_ic_move_to_inbox_white"
         android:title="@string/move_to_inbox"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menuActionMarkUnread"
+        android:icon="@drawable/selector_ic_markunread_white"
+        android:title="@string/mark_unread"
         app:showAsAction="ifRoom" />
 
     <item
