--- a/FlowCrypt/src/main/res/menu/activity_email_manager.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager.xml
@@ -6,7 +6,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menuFeedback"
+        android:id="@+id/menuActionHelp"
         android:icon="@drawable/ic_help_white_24dp"
         android:menuCategory="system"
         android:orderInCategory="1000"
