--- a/FlowCrypt/src/main/res/layout/activity_import_public_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_import_public_keys.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textViewProgressText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
