--- a/FlowCrypt/src/main/res/layout/fragment_email_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_email_list.xml
@@ -19,8 +19,8 @@
             android:id="@+id/textViewActionProgress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/default_margin_content_small"
             android:layout_marginStart="@dimen/default_margin_content_small"
+            android:layout_marginEnd="@dimen/default_margin_content_small"
             android:textSize="@dimen/default_text_size_very_small"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/progressBarActionProgress"
@@ -45,7 +45,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <TextView
         android:id="@+id/emptyView"
         android:layout_width="wrap_content"
@@ -59,12 +58,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/listViewMessages"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollFooter="@android:color/transparent"
-            android:visibility="gone" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMsgs"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -72,6 +73,7 @@
         android:id="@id/viewIdProgressView"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
